--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,1 @@
-<!DOCTYPE html>
-<html lang="en"><head>
-  <title>PUBLIC-PAGES</title>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-  <meta name="mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-capable" content="yes"/>
-  <meta name="keywords" content=""/>
-  <meta name="description" content=""/>
-  <base href="./"/>
-  <link rel="icon" href="data:"/>
-  <link rel="stylesheet" href="./basic.css"/>
-  <!--script _type="module" src="./main.js"></script-->
-  <style></style>
-  <script type="module">// @ts-check 'use strict';
-  import * as basic from './basic.js';
-  const log = console.log; // eslint-disable-line
-  (function ready(...args) {
-    if (!document.body) return setTimeout(ready, 50, ...args);
-    log(`...ready`);
-  })();
-  </script>
-</head><body bgcolor="#808080">
-  <p>Public pages v0.0.5</p>
-</body></html>
+<html><head><title>javierrey.github.io/public-pages</title></head><body><h3>javierrey.github.io/public-pages</h3><ul><li><a href="./view">view</a></li></ul></body></html>
